--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,174 @@
   --foreground: #171717;
 }
 
+@import "tailwindcss";
+
+@theme {
+  /* Prefix */
+  --prefix: tw-;
+
+  /* Breakpoints */
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1280px;
+  --breakpoint-2xl: 1536px;
+
+  /* Colors - Gray */
+  --color-gray-talento-back: #f9fafd;
+  --color-gray-gray: #797e8c;
+  --color-gray-grayl: #eaecef;
+
+  --color-progressBarInactive: #00D27F;
+  --color-gray-menus: #355c7d;
+  --color-gray-menus2: #F0F0C9;
+  --color-gray-menus3: #F2F2F2;
+
+  --color-paleta-iconosMenu:#f8b195;
+  --color-paleta-guinda: #6C1D45;
+  --color-paleta-rojo: #8C1858;
+  --color-paleta-morado: #8C657B;
+  --color-paleta-rosa: #F2DCEB;
+  --color-paleta-blanco: #F2F2F2;
+  --color-fondo: #FBFEF9;
+ 
+
+  /* Spacing */
+  --spacing-0: 0;
+  --spacing-0\.5: 2px;
+  --spacing-1: 4px;
+  --spacing-1\.5: 6px;
+  --spacing-2: 8px;
+  --spacing-2\.5: 10px;
+  --spacing-3: 12px;
+  --spacing-3\.5: 14px;
+  --spacing-4: 16px;
+  --spacing-4\.5: 18px;
+  --spacing-5: 20px;
+  --spacing-5\.5: 22px;
+  --spacing-6: 24px;
+  --spacing-6\.5: 26px;
+  --spacing-7: 28px;
+  --spacing-7\.5: 30px;
+  --spacing-8: 32px;
+  --spacing-8\.5: 34px;
+  --spacing-9: 36px;
+  --spacing-9\.5: 38px;
+  --spacing-10: 40px;
+  --spacing-11: 44px;
+  --spacing-12: 48px;
+  --spacing-14: 56px;
+  --spacing-16: 64px;
+  --spacing-20: 80px;
+  --spacing-24: 96px;
+  --spacing-28: 112px;
+  --spacing-32: 128px;
+  --spacing-36: 144px;
+  --spacing-40: 160px;
+  --spacing-44: 176px;
+  --spacing-48: 192px;
+  --spacing-52: 208px;
+  --spacing-56: 224px;
+  --spacing-60: 240px;
+  --spacing-64: 256px;
+  --spacing-72: 288px;
+  --spacing-80: 320px;
+  --spacing-88: 352px;
+  --spacing-96: 384px;
+  --spacing-97\.5: 390px;
+  --spacing-120: 480px;
+  --spacing-150: 600px;
+  --spacing-160: 640px;
+  --spacing-175: 700px;
+  --spacing-1\/2: 50%;
+  --spacing-1\/3: 33.333333%;
+  --spacing-2\/3: 66.666667%;
+  --spacing-1\/4: 25%;
+  --spacing-2\/4: 50%;
+  --spacing-3\/4: 75%;
+  --spacing-1\/5: 20%;
+  --spacing-2\/5: 40%;
+  --spacing-3\/5: 60%;
+  --spacing-4\/5: 80%;
+  --spacing-1\/6: 16.666667%;
+  --spacing-2\/6: 33.333333%;
+  --spacing-3\/6: 50%;
+  --spacing-4\/6: 66.666667%;
+  --spacing-5\/6: 83.333333%;
+  --spacing-1\/12: 8.333333%;
+  --spacing-2\/12: 16.666667%;
+  --spacing-3\/12: 25%;
+  --spacing-4\/12: 33.333333%;
+  --spacing-5\/12: 41.666667%;
+  --spacing-6\/12: 50%;
+  --spacing-7\/12: 58.333333%;
+  --spacing-8\/12: 66.666667%;
+  --spacing-9\/12: 75%;
+  --spacing-10\/12: 83.333333%;
+  --spacing-11\/12: 91.666667%;
+  --spacing-screen: 100vw;
+  --spacing-full: 100%;
+
+  /* Border Radius */
+  --radius-none: 0px;
+  --radius-sm: 2px;
+  --radius-DEFAULT: 4px;
+  --radius-md: 6px;
+  --radius-lg: 8px;
+  --radius-xl: 12px;
+  --radius-2xl: 16px;
+  --radius-3xl: 24px;
+
+  /* Box Shadow */
+  --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --shadow-DEFAULT: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --shadow-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --shadow-2xl: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --shadow-inner: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+
+  /* Font Family */
+  --font-family-roboto: Roboto, ui-sans-serif, system-ui, -apple-system, "Segoe UI", sans-serif;
+  --font-family-sans: ui-sans-serif, system-ui, -apple-system, "Segoe UI", sans-serif;
+  --font-family-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-family-mono: ui-monospace, Menlo, Consolas, monospace;
+  --font-family-inter: Inter;
+
+  /* Font Size */
+  --font-size-0: 0;
+  --font-size-xxs: 11px;
+  --font-size-xs: 12px;
+  --font-size-2xs: 13px;
+  --font-size-sm: 14px;
+  --font-size-2sm: 15px;
+  --font-size-base: 16px;
+  --font-size-lg: 18px;
+  --font-size-xl: 20px;
+  --font-size-2xl: 24px;
+  --font-size-3xl: 30px;
+  --font-size-3\.5xl: 32px;
+  --font-size-4xl: 36px;
+  --font-size-5xl: 48px;
+  --font-size-6xl: 60px;
+  --font-size-7xl: 72px;
+  --font-size-8xl: 96px;
+  --font-size-9xl: 128px;
+
+  /* Max Width */
+  --max-width-xs: 160px;
+  --max-width-sm: 192px;
+  --max-width-md: 224px;
+  --max-width-lg: 256px;
+  --max-width-xl: 288px;
+  --max-width-2xl: 336px;
+  --max-width-3xl: 384px;
+  --max-width-4xl: 448px;
+  --max-width-5xl: 512px;
+  --max-width-6xl: 576px;
+  --max-width-7xl: 640px;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -17,6 +185,20 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+}
+
+html,
+body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* opcional: evita scroll en el body */
+}
+
+#__next {
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
