Agregar efectos al left menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -206,3 +206,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.active {
+  @apply font-semibold;
+  @apply text-paleta-iconosMenu 
+}
